2012-03-28  Matthew Mundell <matthew.mundell@greenbone.net>

	Add export of Targets.

	* src/gsad.c (init_validator, exec_omp_get): Add command export_targets.

	* src/gsad_omp.c (export_targets_omp): New function.

	* src/gsad_omp.h: Add header accordingly.

	* src/html/omp.xsl (html-targets-table): Add export button to Targets.

2012-03-28  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add filter.

	* src/gsad_omp.c (get_targets_omp): Send filter through to manager.

	* src/html/omp.xsl (html-targets-table): Add filter section to Targets.

2012-03-28  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c, src/gsad_omp.c, src/gsad_omp.h, src/html/omp.xsl,
	src/html/gsad.xsl, src/html/help.xsl: Rename escalator to alert everywhere.

2012-03-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post branch version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2012-03-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, INSTALL: Set dependency for glib and gnutls
	to minimum of what openvas-libraries requires.

2012-03-27  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add ; and ' to comment.

2011-03-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number to 3.0.1.

	* src/html/help.xsl: Updated version number to 3.0.1.

2011-03-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the gsa 3.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Updated version to 3.0.0.

	* src/html/help.xsl: Updated version number to 3.0.0.

2012-03-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (delete_user_oap): Add DESCRIBE_AUTH to commands, as this is
	needed for the Users page.

2012-03-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-edit-note-form, note, note [details])